fix: Add overflow-scroll to comment box

--- a/blog/static/css/chatroom.css
+++ b/blog/static/css/chatroom.css
@@ -85,6 +85,7 @@ h1{
 }
 .commentbox{
     height: 60%;
+    overflow-y: scroll;
 }
 .comment input{
     height: 30%;
