--- a/blog/static/css/profile.css
+++ b/blog/static/css/profile.css
@@ -46,4 +46,5 @@ li{
     width: 50%;
     padding: 20px;
     background: #808080;
+    overflow-y: scroll;
 }
